--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.1.0"
 authors = ["Tiago Guimarães <tilacog@gmail.com>"]
 
 [dependencies]
+actix = "0.7.2"
+futures = "0.1.23"
+tokio = "0.1.7"
